--- a/src/app/pages/prodotti/prodotti-dettaglio/prodotti-dettaglio.component.html
+++ b/src/app/pages/prodotti/prodotti-dettaglio/prodotti-dettaglio.component.html
@@ -1,16 +1,69 @@
-<div mat-dialog-title class="flex justify-between items-center">
-  <h1>{{ prodotto.asin }}</h1>
-</div>
-<div mat-dialog-content class="mat-typography">
-  <div *ngFor="let item of prodotto | keyvalue">
-    <mat-list role="list">
-      <mat-list-item role="listitem">
-        {{ item.key | titlecase }}: {{ item.value }}
-      </mat-list-item>
-      <mat-divider></mat-divider>
-    </mat-list>
-  </div>
-</div>
-<div mat-dialog-actions>
-  <button mat-button mat-dialog-close>Close</button>
-</div>
+<mat-dialog-content>
+  <mat-grid-list cols="2" rowHeight="6:1">
+    <mat-grid-tile>
+      <div class="text-2xl font-medium">ASIN</div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <div class="text-white text-opacity-70">
+        {{ prodotto.asin }}
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+  <mat-divider></mat-divider>
+  <mat-grid-list cols="2" rowHeight="6:1">
+    <mat-grid-tile>
+      <div class="text-2xl font-medium">Titolo</div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <div class="text-white text-opacity-70">
+        {{ prodotto.title }}
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+  <mat-divider></mat-divider>
+  <mat-grid-list cols="2" rowHeight="6:1">
+    <mat-grid-tile>
+      <div class="text-2xl font-medium">Marca</div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <div class="text-white text-opacity-70">
+        {{ prodotto.brand }}
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+  <mat-divider></mat-divider>
+  <mat-grid-list cols="2" rowHeight="6:1">
+    <mat-grid-tile>
+      <div class="text-2xl font-medium">Categoria</div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <div class="text-white text-opacity-70">
+        {{ prodotto.category }}
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+  <mat-divider></mat-divider>
+  <mat-grid-list cols="2" rowHeight="6:1">
+    <mat-grid-tile>
+      <div class="text-2xl font-medium">Prezzo</div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <div class="text-white text-opacity-70">
+        {{ prodotto.price }}
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+  <mat-divider></mat-divider>
+  <mat-grid-list cols="2" rowHeight="6:1">
+    <mat-grid-tile>
+      <div class="text-2xl font-medium">Giacenza</div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <div class="text-white text-opacity-70">
+        Attuale: {{ prodotto.stock }}<br />
+        Minima: {{ prodotto.giacenzaMinima }}
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+  <mat-divider></mat-divider>
+</mat-dialog-content>
