--- a/src/app/pages/acquisti/acquisti-dettaglio/acquisti-dettaglio.component.html
+++ b/src/app/pages/acquisti/acquisti-dettaglio/acquisti-dettaglio.component.html
@@ -1,36 +1,65 @@
-<!-- <div mat-dialog-title class="flex justify-between items-center">
-  <h1>{{ acquisto.purchaseId }}</h1>
-</div>
-<div mat-dialog-content class="mat-typography">
-  <div class="grid grid-flow-col grid-cols-6 grid-rows-6 gap-4">
-    <div *ngFor="let item of acquisto | keyvalue">
-      <p role="listitem" *ngIf="item.key !== 'Acquistiprodotti'">
-        {{ item.key | titlecase }}: <br />
-        {{ item.value }}
-      </p>
-      <mat-divider *ngIf="item.key !== 'Acquistiprodotti'"></mat-divider>
-    </div>
-  </div>
-  <div class="pt-5">
-    <mat-expansion-panel>
-      <mat-expansion-panel-header>
-        <mat-panel-title> Prodotti </mat-panel-title>
-      </mat-expansion-panel-header>
-      <div *ngFor="let prodotto of ordine.ordersItems">
-        <div class="grid grid-flow-col grid-cols-3 grid-rows-3 gap-4">
-          <div *ngFor="let item of prodotto | keyvalue">
-            <p>
-              {{ item.key | titlecase }}: <br />
-              {{ item.value }}
-            </p>
-            <mat-divider class="pt-2"></mat-divider>
-          </div>
-        </div>
-        <mat-divider></mat-divider>
+<mat-dialog-content>
+  <div class="text-3xl font-bold">Acquisto</div>
+  <mat-grid-list cols="2" rowHeight="6:1">
+    <mat-grid-tile>
+      <div class="text-2xl font-medium">ID</div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <div class="text-white text-opacity-70">
+        Id acquisto: {{ acquisto.purchaseId }}<br />
+        Id fornitore: {{ acquisto.supplierId }}
       </div>
-    </mat-expansion-panel>
-  </div>
-</div>
-<div mat-dialog-actions>
-  <button mat-button mat-dialog-close>Close</button>
-</div> -->
+    </mat-grid-tile>
+  </mat-grid-list>
+  <mat-divider></mat-divider>
+  <mat-grid-list cols="2" rowHeight="6:1">
+    <mat-grid-tile>
+      <div class="text-2xl font-medium">Fattura</div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <div class="text-white text-opacity-70">
+        Data: {{ acquisto.billDate | date }}<br />
+        Numero: {{ acquisto.billNumber }}
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+  <mat-divider></mat-divider>
+  <br />
+  <div class="text-3xl font-bold">Prodotti Acquistati</div>
+  <mat-table [dataSource]="acquisto.acquistiProdotti">
+    <ng-container matColumnDef="purchasesItemsId">
+      <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.purchasesItemsId }}
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="purchaseId">
+      <mat-header-cell *matHeaderCellDef> ID Acquisto</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.purchaseId }} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="asin">
+      <mat-header-cell *matHeaderCellDef> ASIN</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.asin }} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="purchasedAmount">
+      <mat-header-cell *matHeaderCellDef> Quantità acquistata</mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.purchasedAmount }}
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="unitPrice">
+      <mat-header-cell *matHeaderCellDef> Prezzo Unitario</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.unitPrice }} </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+  </mat-table>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-raised-button mat-dialog-close color="accent">Chiudi</button>
+</mat-dialog-actions>
