--- a/src/app/pages/prodotti/prodotti-dettaglio/prodotti-dettaglio.component.html
+++ b/src/app/pages/prodotti/prodotti-dettaglio/prodotti-dettaglio.component.html
@@ -67,3 +67,6 @@
   </mat-grid-list>
   <mat-divider></mat-divider>
 </mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-raised-button mat-dialog-close color="accent">Chiudi</button>
+</mat-dialog-actions>
