--- a/src/app/pages/acquisti/acquisti.component.html
+++ b/src/app/pages/acquisti/acquisti.component.html
@@ -1,67 +1,16 @@
-<div>
-  <!--Search button-->
-  <form [formGroup]="filterForm">
-    <div class="p-8 top-0 right-0">
-      <div class="flex items-center rounded-full shadow-xl">
-        <mat-form-field
-          floatLabel="never"
-          class="w-1/2 py-4 px-6 leading-tight"
-          color="accent"
-        >
-          <input
-            formControlName="purchaseId"
-            matInput
-            id="purchaseId"
-            type="text"
-            placeholder="Id"
-          />
-        </mat-form-field>
-        <mat-form-field
-          floatLabel="never"
-          class="w-1/2 py-4 px-6 leading-tight"
-          color="accent"
-        >
-          <input
-            formControlName="supplierId"
-            matInput
-            id="supplierId"
-            type="text"
-            placeholder="supplier id"
-          />
-        </mat-form-field>
-        <mat-form-field
-          floatLabel="never"
-          class="w-1/2 py-4 px-6 leading-tight"
-          color="accent"
-        >
-          <mat-label>Secgli una data</mat-label>
-          <input
-            formControlName="billDate"
-            matInput
-            [matDatepicker]="picker"
-            id="billDate"
-          />
-          <mat-datepicker-toggle matSuffix [for]="picker">
-          </mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
-        <div class="p-4">
-          <button mat-mini-fab color="accent" (click)="filter()">
-            <mat-icon aria-label="search">search</mat-icon>
-          </button>
-        </div>
-      </div>
-    </div>
-  </form>
-
-  <mat-card class="example-card" *ngFor="let card of obs | async">
+<div class="pt-8">
+  <mat-card
+    class="force-flex justify-center items-center w-3/4 mx-auto mt-2"
+    *ngFor="let card of obs | async"
+  >
     <mat-card-header>
       <mat-card-title>{{ card.purchaseId }}</mat-card-title>
-      <mat-card-subtitle>{{ card.billDate }}</mat-card-subtitle>
+      <mat-card-subtitle>
+        {{ card.billDate | date: "dd/MM/yyyy" }}
+      </mat-card-subtitle>
     </mat-card-header>
-    <span class="spacer"></span>
-    <mat-card-content>
-      <p>{{ card.purchaseDate | date: "dd/MM/yyyy" }}</p>
+    <span class="flex-auto"></span>
+    <mat-card-content class="w-1/2">
       <!--Lista Oggeti-->
       <mat-accordion>
         <mat-expansion-panel>
@@ -85,7 +34,7 @@
       </mat-accordion>
       <!--Fine lista oggetti-->
     </mat-card-content>
-    <span class="spacer"></span>
+    <span class="flex-auto"></span>
     <button mat-icon-button (click)="openDettaglio(card)">
       <mat-icon aria-label="info" color="link">info</mat-icon>
     </button>
