--- a/src/app/pages/prodotti/prodotti.component.html
+++ b/src/app/pages/prodotti/prodotti.component.html
@@ -1,5 +1,8 @@
 <div class="grid gap-4 grid-cols-5 p-8">
-  <mat-card *ngFor="let item of listaProdotti">
+  <mat-card
+    *ngFor="let item of listaProdotti"
+    class="justify-start flex-col flex-wrap"
+  >
     <mat-card-header>
       <mat-card-title>
         {{ item.title }}
@@ -13,11 +16,13 @@
       mat-card-image
       src="assets/{{ item.asin }}.jpg"
       alt="{{ item.title }}"
+      class="pl-6"
     />
+
     <mat-card-content>
       <p>Magazzino: {{ item.stock }}</p>
     </mat-card-content>
-    <mat-card-actions>
+    <mat-card-actions class="m-auto">
       <div class="grid gap-4 grid-cols-2 px-2">
         <form class="example-form" [formGroup]="loginForm">
           <mat-label> Quantità: </mat-label>
